# Dual_arm_DLO_handling

./: .gitignore  README.md  iwb_lab_workspace_4.scene
dual_arm_panda_ur_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
dual_arm_panda_ur_moveit_config/config/: 2f_85.ros2_control.xacro  hand.xacro  joint_limits.yaml  kinematics.yaml  left_initial_positions.yaml  moveit_controllers.yaml  opml_planning.yaml  panda_arm_macro.xacro  panda_ur.srdf  panda_ur.urdf.xacro  ros2_controllers.yaml  ur.ros2_control.xacro  ur_macro.xacro
dual_arm_panda_ur_moveit_config/launch/: demo.launch.py  moveit.rviz
mtc_dual_arm_panda_ur/: CMakeLists.txt  package.xml
mtc_dual_arm_panda_ur/launch/: load_scene.launch.py  pick_place_demo.launch.py
mtc_dual_arm_panda_ur/src/: mtc_dual_arm_node.cpp  mtc_dual_arm_node_changed.cpp
mtc_dual_arm_real/: CMakeLists.txt  package.xml
mtc_dual_arm_real/launch/: load_scene.launch.py  mtc_demo.launch.py  pick_place_demo.launch.py
mtc_dual_arm_real/src/: mtc_dual_arm_node.cpp
solution_subscriber_pkg/: package.xml  setup.cfg  setup.py
solution_subscriber_pkg/solution_subscriber_pkg/: demo.py  marker_publisher.py  replan_bridge.py  solution_subscriber.py  solution_subscriber_1.py  solution_subscriber_2.py
ur10e_1_moveit _config/: CMakeLists.txt  package.xml
ur10e_1_moveit _config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_macro_1.xacro
ur10e_1_moveit _config/launch/: ur_moveit.launch.py  ur_moveit_changed.launch.py  ur_moveit_conbine.launch.py
ur10e_1_moveit _config/rviz/: view_robot.rviz
ur10e_1_moveit _config/srdf/: ur.srdf
ur_controller/: UDPReceiver.py  ee_pose.txt  smooth_real_world_traj_12.txt  smooth_real_world_traj_13.txt  smooth_real_world_traj_4.txt  smooth_real_world_traj_6.txt  traj_server.py  ur_get_tcp_and_ee_array.py  ur_joint_traj.py
